@@ -1,5 +1,8 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-07-13 mmichaud <michael.michaud@free.fr>
+  * Small NPE fix in MergeSelectedPolygonsWithNeighbourPlugIn
+  
 2012-07-12 mmichaud <michael.michaud@free.fr>
   * Select and activate SelectFeaturesTool the first time OpenJUMP is opened
     Selection is made in OpenJUMPConfiguration and activation in JUMPWorkbench
